# emacs-dice-roll

./: Cargo.toml  README.md  dice-roll.el
src/: lib.rs
